--- a/QXInt/QXInt.vcxproj.filters
+++ b/QXInt/QXInt.vcxproj.filters
@@ -29,8 +29,10 @@
     <ClCompile Include="QXlnt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClInclude Include="QXlnt.h">
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QXlnt.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </QtMoc>
   </ItemGroup>
 </Project>
